# playwright-agent-test

./: .gitignore  .gitmodules  d  file
agent/: .env.test.example  .gitignore  PORTING_NOTES.md  README.md  __init__.py  pyproject.toml
agent/config/: default.yaml
agent/scripts/: __init__.py  install.sh
agent/scripts/fixtures/: __init__.py  live.py  serve.py  targets.py
agent/scripts/fixtures/app/: dashboard_r2.html  delayed_visible.html  dialogs.html  dynamic_list.html  fixture_state.js  iframe_child.html  iframe_parent.html  login.html  tabs.html  upload.html
agent/scripts/fixtures/goldens/: a5_login_recording.normalized.json
agent/scripts/fixtures/graphs/: fixture_dialog_confirm.json  fixture_iframe_interaction.json  fixture_login_and_navigate.json  fixture_tabs_navigation.json  fixture_upload_file.json
agent/scripts/fixtures/llm_cassettes/: anthropic_chat.json  openai_chat.json  openai_compatible_chat.json
agent/scripts/human/: _session.py
agent/scripts/smoke/: __init__.py  _runner.py  gate_a.py  phase_0.py  phase_1.py  phase_10.py  phase_11.py  phase_12.py  phase_13.py  phase_2.py  phase_3.py  phase_4.py  phase_5.py  phase_6.py  phase_7.py  phase_8.py  phase_9.py  phase_a10.py  phase_a11.py  phase_a12.py  phase_a13.py  phase_a4.py  phase_a5.py  phase_a6.py  phase_a7.py  phase_a8.py  phase_a9.py  recorder_delete_last_smoke.py
agent/scripts/spikes/: recorder_spike.py
agent/src/agent/cache/: engine.py  models.py
agent/src/agent/cli/: __main__.py  bench_cmd.py  export_cmd.py  fix_cmd.py  human_session_cmd.py  mode_cmd.py  panel_cmd.py  record_cmd.py  (+3 more)
(+105 files in other folders)
